# imperfect

./: .vars.ini  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
imperfect/: __init__.py  types.py  verify.py
imperfect/tests/: __init__.py  __main__.py  editing.py  imperfect.py  imperfect_hypothesis.py
