[metadata]
name = imperfect
description = A CST-based config editor for configparser
long_description = file: README.md
long_description_content_Type = text/markdown
license = MIT
url = https://github.com/thatch/imperfect
author = Tim Hatch
author_email = tim@timhatch.com
# classifiers =
#     Development Status :: 4 - Beta,
#     License :: OSI Approved :: Apache Software License,
#     Programming Language :: Python,
#     Programming Language :: Python :: 3,
#     Programming Language :: Python :: 3 :: Only,
#     Programming Language :: Python :: 3.6,
#     Programming Language :: Python :: 3.7,
#     Programming Language :: Python :: 3.8,


[options]
packages = imperfect

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
