[metadata]
name = imperfect
description = A CST-based config editor for configparser
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/thatch/imperfect/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = find:
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
# technically only for tests
install_requires =
    parameterized >= 0.6.1
    moreorless >= 0.2.0
python_requires = >=3.6

[options.package_data]
imperfect =
    py.typed

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = imperfect/*
omit = imperfect/tests/*

[coverage:report]
fail_under = 95
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py36, py37, py37-minimal, py38

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
setenv =
    py{36,37,38}: COVERAGE_FILE={envdir}/.coverage

[testenv:py37-minimal]
deps =
changedir = /
commands =
    python -m imperfect.tests

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
