[metadata]
name = imperfect
description = A CST-based config editor for configparser
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/thatch/imperfect/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = imperfect
setup_requires =
    setuptools_scm >= 8
    setuptools >= 65
python_requires = >=3.10
include_package_data = true
install_requires =
    moreorless >= 0.2.0

[options.extras_require]
dev =
    black == 23.12.1
    checkdeps == 0.0.2
    flake8 == 7.0.0
    mypy == 1.8.0
    tox == 4.12.1
    twine == 4.0.2
    ufmt == 2.3.0
    usort == 1.0.7
    wheel == 0.38.1
    hypothesis == 6.96.1
test =
    coverage >= 6
    parameterized >= 0.6.1

[options.package_data]
imperfect =
    py.typed

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = imperfect/*
omit = imperfect/tests/*

[coverage:report]
fail_under = 95
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True
install_types = True

[tox:tox]
envlist = py310-minimal, py{310,311,312}, coverage

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{310,311,312}

[testenv:py310-minimal]
deps =
changedir = /
commands =
    python -m imperfect.tests

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
